--- a/VB/Demo.Win/App.config
+++ b/VB/Demo.Win/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
     <add key="FullNameFormat" value="LastName FirstName MiddleName"/>
@@ -27,4 +27,4 @@
 		-->
 	    </switches>
   </system.diagnostics>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
